--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -30,7 +30,10 @@ article {
 
 .sml_image
 {
+  object-fit: cover;
+  width: 100%;
   height: 200px;
+
   margin-left: auto;
   margin-right: auto;
   display: block;
