--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -22,19 +22,40 @@
 }
 
 article {
-  border: 1px solid #ccc;
-  border-radius: 2px;
   padding: 10px;
   margin: 10px;
+  display: flex;
+  width: 150px;
 }
 
-.sml_image
-{
+.sml_image {
   object-fit: cover;
-  width: 100%;
-  height: 200px;
+  width: 250px;
+  height: 250px;
 
   margin-left: auto;
   margin-right: auto;
-  display: block;
+  display: inline;
+}
+
+.wrapper {
+  width: 1060px;
+}
+
+header {
+  width: 200px;
+}
+
+section {
+  width: 800px;
+}
+
+.grid {
+  display: flex;
+ }
+.col-1-2 {
+  flex: 1;
+}
+.cole-1-2:last-child {
+  margin-left: 20px;
 }
